--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-modal": "^12.1.0",
     "react-native-modalize": "^2.0.8",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
@@ -32,6 +33,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-modals": "^0.19.1",
     "typescript": "~4.0.0"
   },
   "private": true
