--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "expo": "^42.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.2.1",
+    "expo-sharing": "^9.2.1",
+    "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -26,10 +29,9 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
-    "expo-splash-screen": "~0.11.2",
-    "expo-updates": "~0.8.1",
-    "react-native-unimodules": "~0.14.5"
+    "xlsx": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
