--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "^42.0.0",
