--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
+    "@freakycoder/react-native-bounceable": "^0.2.5",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^2.1.0",
@@ -24,6 +25,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-checkbox-card": "^0.1.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-modal": "^13.0.0",
