--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@freakycoder/react-native-bounceable": "^0.2.5",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "^42.0.0",
@@ -30,6 +29,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.8",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
