--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@freakycoder/react-native-bounceable": "^0.2.5",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "^2.1.0",
+    "@react-native-picker/picker": "react-native-picker/picker",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "^42.0.0",
